// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`get all movies when: a user wants to view all movies with NO query strings then: we return all the movie titles 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
      The Ultimate Movie App
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        The Ultimate Movie App
      </h1>
    </header>
    <main>
      <form action="/movies/create"
            method="get"
      >
        <button>
          Add a Movie
        </button>
      </form>
      <ul>
      </ul>
      <p>
      </p>
      <a href="/movies/1">
        Nosferatu
      </a>
      <p>
      </p>
      <a href="/movies/2">
        Point Break
      </a>
    </main>
  </body>
</html>
`;

exports[`get all movies when: a user wants to view all movies with a specific release year AND run time then: we return all the movie titles with the specified release year AND run time 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
      The Ultimate Movie App
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        The Ultimate Movie App
      </h1>
    </header>
    <main>
      <form action="/movies/create"
            method="get"
      >
        <button>
          Add a Movie
        </button>
      </form>
      <ul>
      </ul>
      <p>
      </p>
      <a href="/movies/1">
      </a>
      <p>
      </p>
      <a href="/movies/2">
      </a>
      <p>
      </p>
      <a href="/movies/3">
      </a>
    </main>
  </body>
</html>
`;

exports[`get all movies when: a user wants to view all movies with a specific release year BUT the user does NOT enter a valid year in the query string then: we return a flash error message that says 'Year must be a 4-digit number' 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
      The Ultimate Movie App
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        The Ultimate Movie App
      </h1>
    </header>
    <main>
      <ul>
        <li class="flash error">
          Year must be a 4-digit number
        </li>
      </ul>
      <p>
        Tell us about your favourite movies!
        <form action="/signUp"
              method="get"
        >
          <button>
            Sign Up
          </button>
        </form>
        <form action="/signIn"
              method="get"
        >
          <button>
            Sign In
          </button>
        </form>
        <form action="/movies"
              method="get"
        >
          <button>
            See Movies
          </button>
        </form>
        <form action="/reviews"
              method="get"
        >
          <button>
            See Reviews
          </button>
        </form>
      </p>
      <img src="/images/Children_of_paradise.jpg"
           alt="Children of Paradise"
           title="Children of Paradise"
      >
    </main>
  </body>
</html>
`;

exports[`get all movies when: a user wants to view all movies with a specific release year then: we return all the movie titles with the specified release year 1`] = `
<!DOCTYPE html>
<html lang="en-US">
  <head>
    <title>
      The Ultimate Movie App
    </title>
    <meta charset="UTF-8">
    <link rel="stylesheet"
          href="/stylesheets/application.css"
    >
  </head>
  <body>
    <header>
      <h1>
        The Ultimate Movie App
      </h1>
    </header>
    <main>
      <form action="/movies/create"
            method="get"
      >
        <button>
          Add a Movie
        </button>
      </form>
      <ul>
      </ul>
      <p>
      </p>
      <a href="/movies/1">
      </a>
      <p>
      </p>
      <a href="/movies/2">
      </a>
    </main>
  </body>
</html>
`;
